--- a/index.html
+++ b/index.html
@@ -10,7 +10,460 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
+    <!-- TYPOGRAPHY -->
+    <div class="container">
+      <h1 class="page-header">Hello, world!<small>Secondary text</small></h1>
+      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p><mark>Lorem ipsum dolor sit amet</mark>, consectetur adipisicing elit, <u>sed do eiusmod</u> tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud <del>exercitation ullamco laboris</del> nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+        dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+      <hr>
+
+      <!-- ALIGNMENT & TRANSFORMATION-->
+
+      <p class="text-left">Left aligned text.</p>
+      <p class="text-center">Center aligned text.</p>
+      <p class="text-right">Right aligned text.</p>
+      <p class="text-justify">Justified text.</p>
+      <p class="text-nowrap">No wrap text.</p>
+
+      <p class="text-center text-lowercase">Text lowercase.</p>
+      <p class="text-center text-uppercase">Text uppercase.</p>
+      <p class="text-center text-capitalize">Text capitalize.</p>
+
+      <!-- QUICK FLOATS -->
+      <div class="pull-right">Div floated to the right.</div>
+      <div class="pull-left">Div floated to the left.</div>
+
+      <!-- CLEAR FLOAT -->
+      <div class="clearfix"></div>
+
+      <hr>
+
+      <!-- BLOCKQUOTE -->
+      <blockquote class="blockquote">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <footer>Quote by <cite title="John Doe">John Doe</cite></footer>
+      </blockquote>
+
+      <blockquote class="blockquote-reverse">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <footer>Quote by <cite title="John Doe">John Doe</cite></footer>
+      </blockquote>
+
+      <hr>
+
+      <!-- LISTS -->
+      <ul>
+        <li>Item One</li>
+        <li>Item Two</li>
+        <li>tem Three</li>
+        <li>Item Four</li>
+      </ul>
+
+      <ul class="list-unstyled">
+        <li>Item One</li>
+        <li>Item Two</li>
+        <li>tem Three</li>
+        <li>Item Four</li>
+      </ul>
+
+      <ul class="list-inline">
+        <li>Item One</li>
+        <li>Item Two</li>
+        <li>tem Three</li>
+        <li>Item Four</li>
+      </ul>
+
+      <hr>
+
+      <!-- CODE -->
+      <code>&lt;h1&gt;Heading Text&lt;/h1&gt;</code>
+      <br>
+      Change directory with <kbd>cd</kbd>
+      <br>
+      To edit settings, press <kbd><kbd>ctrl</kbd> + <kbd>,</kbd></kbd>
+
+      <hr>
+
+      <!-- CONTEXTUAL COLORS -->
+      <p class="text-primary">Hello World</p>
+      <p class="text-success">Hello World</p>
+      <p class="text-info">Hello World</p>
+      <p class="text-warning">Hello World</p>
+      <p class="text-danger">Hello World</p>
+      <p class="text-muted">Hello World</p>
+
+      <!-- CONTEXTUAL BACKGROUND COLORS -->
+      <p class="bg-primary">Hello World</p>
+      <p class="bg-success">Hello World</p>
+      <p class="bg-info">Hello World</p>
+      <p class="bg-warning">Hello World</p>
+      <p class="bg-danger">Hello World</p>
+
+    </div>
+
+    <hr>
+
+    <!-- BUTTONS -->
+    <div class="container">
+
+      <button class="btn btn-default">Button</button>
+      <a href="#" class="btn btn-default" role="button">Link</a>
+      <input type="submit" class="btn btn-default" value="Submit">
+
+      <br><br>
+
+      <!-- CONTEXTUAL BUTTONS -->
+      <button class="btn btn-default">Default</button>
+      <button class="btn btn-primary">Primary</button>
+      <button class="btn btn-success">Success</button>
+      <button class="btn btn-info">Info</button>
+      <button class="btn btn-warning">Warning</button>
+      <button class="btn btn-danger">Danger</button>
+      <button class="btn btn-link">Link</button>
+
+      <br><br>
+
+      <!-- BUTTON SIZES -->
+      <button class="btn btn-default btn-lg">Large</button>
+      <button class="btn btn-default">Default</button>
+      <button class="btn btn-default btn-sm">Small</button>
+      <button class="btn btn-default btn-xs">Extra small</button>
+      <button class="btn btn-default" disabled="disabled">Disabled</button>
+
+
+    </div>
+
+    <hr>
+
+    <!-- FORMS -->
+    <div class="container">
+      <form>
+        <div class="form-group">
+          <label>Name</label>
+          <input type="text" class="form-control" placeholder="Add Name">
+        </div>
+
+        <div class="form-group">
+          <label>Email</label>
+          <input type="email" class="form-control" placeholder="Add Email">
+        </div>
+
+        <div class="form-group">
+          <label>Message</label>
+          <textarea class="form-control" placeholder="Add Message"></textarea>
+        </div>
+
+        <div class="form-group">
+          <label>Gender</label>
+          <select class="form-control">
+            <<option value="male">Male</option>
+            <<option value="female">Female</option>
+            <<option value="other">Other</option>
+          </select>
+        </div>
+
+        <div class="form-group">
+          <label>Upload FIle</label>
+          <input type="file">
+          <p class="help-block">Only png and jpg allowed</p>
+        </div>
+
+        <div class="checkbox">
+          <label>
+            <input type="checkbox">Check me out
+          </label>
+        </div>
+
+        <button class="btn btn-default">Submit</button>
+
+      </form>
+
+      <hr>
+
+      <!-- INLINE FORM -->
+      <form class="form-inline">
+        <div class="form-group">
+          <label>Email</label>
+          <input type="email" class="form-control" placeholder="Email">
+        </div>
+
+        <div class="form-group">
+          <label>Password</label>
+          <input type="password" class="form-control" placeholder="Password">
+        </div>
+
+        <div class="checkbox">
+          <label>
+            <input type="checkbox"> Rememeber me
+          </label>
+        </div>
+
+        <button type="submit" class="btn btn-default">Login</button>
+      </form>
+    </div>
+
+    <hr>
+
+    <!-- TABLES -->
+    <div class="container">
+      <table class="table table-striped table-bordered table-hover table-condensed">
+        <tr>
+          <th>Firstname</th>
+          <th>Lastname</th>
+          <th>Age</th>
+        </tr>
+        <tr class="danger">
+          <td>Jill</td>
+          <td>Smith</td>
+          <td>50</td>
+        </tr>
+        <tr>
+          <td>Eve</td>
+          <td>Jackson</td>
+          <td>24</td>
+        </tr>
+        <tr class="success">
+          <td>John</td>
+          <td>Doe</td>
+          <td>34</td>
+        </tr>
+        <tr>
+          <td>Stephanie</td>
+          <td>Landon</td>
+          <td>47</td>
+        </tr>
+        <tr>
+          <td>Mike</td>
+          <td>Johnson</td>
+          <td>19</td>
+        </tr>
+      </table>
+    </div>
+
+    <hr>
+
+    <!-- LIST GROUP -->
+    <div class="container">
+      <ul class="list-group">
+        <li class="list-group-item">Item One</li>
+        <li class="list-group-item">Item Two</li>
+        <li class="list-group-item">tem Three</li>
+        <li class="list-group-item">Item Four</li>
+      </ul>
+
+      <div class="list-group">
+        <a href="#" class="list-group-item active">Item One</a>
+        <a href="#" class="list-group-item list-group-item-success">Item Two</a>
+        <a href="#" class="list-group-item disabled">Item Three</a>
+        <a href="#" class="list-group-item">Item Four</a>
+      </div>
+
+    </div>
+
+    <hr>
+
+
+    <div class="container">
+      <!-- PANELS -->
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">Panel title</h3>
+        </div>
+        <div class="panel-body">
+          Panel content
+        </div>
+        <div class="panel-footer">
+          Panel footer
+        </div>
+      </div>
+
+      <hr>
+
+      <!-- WELLS -->
+      <div class="well">Hello World</div>
+      <div class="well well-lg">Hello World</div>
+      <div class="well well-sm">Hello World</div>
+
+      <hr>
+
+      <!-- ALERTS -->
+      <div class="alert alert-success" role="alert">A success alert</div>
+      <div class="alert alert-info" role="alert">An info alert</div>
+      <div class="alert alert-warning" role="alert">A warning alert</div>
+      <div class="alert alert-danger" role="alert">A danger alert</div>
+
+      <div class="alert alert-warning alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert"><span>&times;</span></button>
+        You can close this alert
+      </div>
+
+
+      <!-- PROGRESS BARS -->
+      <div class="progress">
+        <div class="progress-bar" style="width:25%">
+          25%
+        </div>
+      </div>
+
+      <div class="progress">
+        <div class="progress-bar progress-bar-success" style="width:50%">
+          50%
+        </div>
+      </div>
+
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped" style="width:75%">
+          75%
+        </div>
+      </div>
+
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped active" style="width:85%">
+          85%
+        </div>
+      </div>
+
+      <hr>
+
+      <!-- LABELS -->
+      <span class="label label-default">Default</span>
+      <h1>Hello<span class="label label-primary">Primary</span></h1>
+      <span class="label label-success">Success</span>
+      <span class="label label-info">Info</span>
+      <span class="label label-warning">Warning</span>
+      <span class="label label-danger">Danger</span>
+
+      <hr>
+
+      <!-- BADGES -->
+      <a href="#">Inbox <span class="badge">50</span></a>
+
+      <button class="btn btn-primary" type="button">
+        Messages <span class="badge">2</span>
+      </button>
+
+    </div>
+
+    <hr>
+
+    <!-- IMAGES -->
+    <div class="container">
+      <img class="thumbnail" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150">
+      <img class="img-rounded" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150"><br><br>
+      <img class="img-circle" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150">
+    </div>
+
+    <hr />
+
+    <!-- GRIDS -->
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="col-md-4">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="row">
+        <div class="col-md-8 col-sm-8">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="col-md-4 col-sm-4">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="row">
+        <div class="col-md-8 col-sm-8 col-xs-8">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="row">
+        <div class="col-md-3">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="col-md-3">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="col-md-3">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="col-md-3">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="row">
+        <div class="col-md-6">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="col-md-6">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="row">
+        <div class="col-md-1">
+            <h3>Box</h3>
+        </div>
+        <div class="col-md-1">
+            <h3>Box</h3>
+        </div>
+        <div class="col-md-1">
+            <h3>Box</h3>
+        </div>
+        <div class="col-md-1">
+            <h3>Box</h3>
+        </div>
+        <div class="col-md-1">
+            <h3>Box</h3>
+        </div>
+        <div class="col-md-1">
+            <h3>Box</h3>
+        </div>
+        <div class="col-md-1">
+            <h3>Box</h3>
+        </div>
+        <div class="col-md-1">
+            <h3>Box</h3>
+        </div>
+        <div class="col-md-1">
+            <h3>Box</h3>
+        </div>
+        <div class="col-md-1">
+            <h3>Box</h3>
+        </div>
+        <div class="col-md-1">
+            <h3>Box</h3>
+        </div>
+        <div class="col-md-1">
+            <h3>Box</h3>
+        </div>
+      </div>
+    </div>
+
+
+    <div style="height:400px"></div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
